Fix search icon spacing

--- a/src/search/components/SearchInput.module.css
+++ b/src/search/components/SearchInput.module.css
@@ -6,10 +6,14 @@
 
 .inputContainer svg {
   position: absolute;
+}
+
+svg.spinner {
   right: calc(var(--baseline) / 3);
 }
 
 svg.searchIcon {
+  right: calc(var(--baseline) / 2);
   width: 18px;
   height: 18px;
   fill: var(--color-border);
